--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ body{
     font-family: "Open Sans"; /*from fonts.google, linked in HTML header*/
     padding: 3% 5%; /*relative sizing, shorthand padding*/
 }
+/*selector list*/
 h1, h2, h3{
     font-family: "Raleway"; /*from fonts.google, linked in HTML header*/
 }
@@ -46,7 +47,7 @@ img.screenshots{
     border-width: 1.5px;
     /*nested selectors*/
     .inputs{
-        border-width: .5px;
+        border-width: 1px;
     }
 }
 .video{
@@ -104,7 +105,6 @@ h3 + h4{
     letter-spacing: 2px;
     text-decoration: none;
 }
-
 /*screen-width query for smaller screens*/
 @media screen and (max-width: 100px) {
     /*grid*/
@@ -115,7 +115,6 @@ h3 + h4{
         grid-column-gap: 20px;
     }
 }
-
 /*screen-width query for smaller screens*/
 @media screen and (max-width: 500px) {
     img.screenshots{
